# Algosphere

./: .gitattributes  .gitignore  .railwayignore  CLAUDE.md  package-lock.json  package.json  render.yaml  turbo.json  vercel.json
.github/workflows/: ci.yml
apps/asset-worker/: Dockerfile  README.md  factory.py  founder.py  ingest.py  llm.py  railway.json  reels.py  requirements.txt  storage.py  story.py  worker.py
apps/copy-engine/: Dockerfile  Procfile  README.md  coach.py  dlq.py  docker-compose.yml  executor.py  orchestrator.py  railway.json  reconciler.py  requirements.txt  risk_admin.py
apps/desktop/: .gitignore  README.md  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: README.md
apps/desktop/src-tauri/src/: main.rs
apps/mt5-bridge/: .env.example  README.md  bridge.py  dashboard.html  dependency_guard.py  execution_engine.py  requirements.txt  start.py  start_runtime.py
apps/signal-engine/: config.py  main.py  notifier.py  notify_automation.py  notify_discord.py  observability.py  requirements.txt  system_events.py
apps/telegram-bot/: DEPLOY.md  bot.py  database.py  nixpacks.toml  requirements.txt
apps/web/: .env.local.example  .eslintrc.js  next.config.mjs  package.json  (+4 more)
docs/: COPY_ENGINE_RUNBOOK.md  COPY_TRADING_INFRASTRUCTURE.md  DEPLOYMENT_RUNBOOK.md  PRODUCT_ARCHITECTURE.md  WHATS_LEFT.md  architecture.md  deployment.md
growth/: README.md  smoke-test.mjs
scripts/: growth-autopost.mjs  smoke-test.mjs
supabase/: config.toml  seed.sql
(+1072 files in other folders)
