[package]
name        = "algosphere-desktop"
version     = "0.1.0"
edition     = "2021"
description = "AlgoSphere Quant native desktop terminal"
authors     = ["AlgoSphere Quant"]
license     = "Proprietary"
repository  = "https://github.com/denis5bright7889/algosphere"
rust-version = "1.78"

[lib]
name       = "algosphere_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri        = { version = "2.1",  features = ["tray-icon"] }
tauri-plugin-notification = "2.0"
serde        = { version = "1",    features = ["derive"] }
serde_json   = "1"

# Updater plugin is wired in tauri.conf.json but inactive by default —
# uncomment to enable signed auto-updates once the /api/desktop/update
# route ships on the web app.
# tauri-plugin-updater = "2.0"

[features]
# Default release feature set — keep empty so devs can opt into extras.
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
